--- a/DLPOLY_Tutorial/Test/TEST1/CONTROL
+++ b/DLPOLY_Tutorial/Test/TEST1/CONTROL
@@ -1,5 +1,4 @@
 DL_POLY: Au Nanoparticle s=10Angstrom Test Case (200 Atoms)
-
 # SYSTEM & EMSEMBLE
 press                 0.001
 temperature           300
@@ -8,15 +7,12 @@ ensemble nve
 
 # Don't understand
 # dump		      500
-restart scale	      
+# restart scale	      
 
 #EQUILIBRATION & STEPS
 equilibration 	      5000
 steps                 200000
 scale                 10
-minimise force        20        1.0        0.00001
-optimise energy       0.001     0.00005
-regauss 	      3
 
 # SYSTEM CUTOFFS AND EECTROSTATICS 
 cutoff		      8.2
@@ -39,7 +35,7 @@ rdf                   10
 
 dump 		      500
 
-job time              1000
-close time            100
+job time              10000
+close time            1000
 
 finish
